Add query API service with FastAPI integration and update Makefile and docker-compose for local development
This commit introduces the query API service for fetching historical candle data from TimescaleDB, implemented with FastAPI. Key changes include:

- Addition of `dataflow/query/api` with endpoints for health checks and candle retrieval.
- Integration of the query API into `docker-compose.yml` for containerized deployment.
- Updated `Makefile` to include commands for running and logging the query API locally.
- Dependency management via `requirements.txt` in the `query` module.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -106,6 +106,22 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  query-api:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.query
+    container_name: trading-query-api
+    ports:
+      - "8001:8001"
+    environment:
+      DATABASE_URL: postgresql://postgres:postgres@timescaledb:5432/trading
+      HOST: "0.0.0.0"
+      PORT: "8001"
+    depends_on:
+      timescaledb:
+        condition: service_healthy
+    restart: unless-stopped
+
 volumes:
   timescaledb_data:
 
