--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -122,6 +122,24 @@ services:
         condition: service_healthy
     restart: unless-stopped
 
+  filter-settings:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.filter-settings
+    container_name: trading-filter-settings
+    environment:
+      NATS_SERVERS: nats://nats:4222
+      NATS_CLIENT_NAME: filter-settings
+      DATABASE_URL: postgresql://postgres:postgres@timescaledb:5432/trading
+      INDICATOR_PAIRS: "NQ DEC25:5m"
+      BUFFER_SIZE: "3"
+    depends_on:
+      nats:
+        condition: service_healthy
+      timescaledb:
+        condition: service_healthy
+    restart: unless-stopped
+
 volumes:
   timescaledb_data:
 
